--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "imports": {
     "site/": "./",
     "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.75.2/",
-    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.48.0/",
+    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@ec42259c5eb71aa38dd0002b35d670ecf16db29d/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.6",
     "preact/": "https://esm.sh/preact@10.19.6/",
